Warning added in r208542 https://bugs.webkit.org/show_bug.cgi?id=164636

Patch by Alejandro G. Castro <alex@igalia.com> on 2016-11-15
Reviewed by Eric Carlson.

Deleted the copy constructor, we now explicitly copy the object in
the clone method.

* platform/mediastream/MediaStreamTrackPrivate.cpp: Delete the
copy constructor.
(WebCore::MediaStreamTrackPrivate::clone): Copy the relevant
information for the clone operation in the API.
* platform/mediastream/MediaStreamTrackPrivate.h: Delete the copy
constructor.

Canonical link: https://commits.webkit.org/182500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208786 268f45cc-cd09-0410-ab3c-d52691b4dbfc